--- a/templates/subordinatetask/list_subordinatetask.html
+++ b/templates/subordinatetask/list_subordinatetask.html
@@ -1,10 +1,7 @@
-{% extends 'base.html' %}
-{% load static %}
 
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 
 
-<body class="hold-transition sidebar-mini">
 <!-- Site wrapper -->
 <div class="wrapper">
 
@@ -37,12 +34,6 @@
             <li class="nav-item">
               <a class="nav-link active" href="{% url 'AddTareaSubordinadaSection' %}">Nueva Tarea Subordinada</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li> -->
           </ul>
           <div class="card-tools">
             <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
@@ -55,7 +46,7 @@
                 <thead>
                     <tr>
                         <th style="width: 1%">
-                            Id                                     
+                            Id                                    
                         </th>
                         <th style="width: 20%">
                             Nombre
@@ -69,6 +60,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                {{data}}
                   {% for tareaSubordinada in data.tareaSubordinada %}
                     <tr>
                         <td>
