--- a/templates/task/tasklist.html
+++ b/templates/task/tasklist.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1>Projects</h1>
+              <h1>Mis tareas asignadas</h1>
             </div>
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
