Aceptar Tarea Finalizado

--- a/templates/task/tasklist.html
+++ b/templates/task/tasklist.html
@@ -201,7 +201,7 @@
                             </div>
                           </div>
                           <div class="modal-footer justify-content-between">
-                            <button type="button" class="btn btn-primary">Aceptar</button>
+                            <a type="button" class="btn btn-primary" href="{% url 'AcceptTask' idTask=tarea.idTarea  %}">Aceptar</a>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                           </div>
                         </div>
