--- a/templates/subordinatetask/subordinatetask.html
+++ b/templates/subordinatetask/subordinatetask.html
@@ -30,7 +30,7 @@
                                     <div class="card card-body">
                                         <div class="row">
                                             <div class="form-group col-md-6">
-                                                <label for="nombretarea">Nombre</label>
+                                                <label for="nombretarea">Nombre Tarea Subordinada</label>
                                                 <input type="text" class="form-control" name="nombreTareaSubordinada" id="nombreTareaSubordinada"
                                                     placeholder="Nombre Tarea Subordinada" />
                                             </div>
@@ -38,6 +38,16 @@
                                             <div class="form-group col-md-6">
                                                     <label class="bmd-label-floating">Id Tarea</label>
                                                     <input type="text" class="form-control" name="selectTarea" placeholder="Id Tarea">
+                                            </div>
+
+                                            <div class="form-group col-md-6">
+                                                <label class="bmd-label-floating">Id Prioridad Tarea</label>
+                                                <input type="text" class="form-control" name="selectPrioridadTarea" placeholder="Id Tarea">
+                                            </div>
+
+                                            <div class="form-group col-md-6">
+                                                <label class="bmd-label-floating">Id Estado Tarea</label>
+                                                <input type="text" class="form-control" name="selectEstadoTarea" placeholder="Id Tarea">
                                             </div>
                                         </div>
                                         <div class="row">
