--- a/templates/task/tasklist.html
+++ b/templates/task/tasklist.html
@@ -219,16 +219,21 @@
                               <span aria-hidden="true">×</span>
                             </button>
                           </div>
-                          <div class="modal-body">
-                            <div class="form-group text-left">
-                              <label>Ingrese Motivo de rechazo</label>
-                              <textarea class="form-control" rows="3" placeholder="Motivo ..."></textarea>
+                          <form method="POST" action="{% url 'RejectTask' idTask=tarea.idTarea  %}">
+                            {% csrf_token %}
+                            <div class="modal-body">
+                              <div class="form-group text-left">
+                                <label>Ingrese Motivo de rechazo</label>
+                                <textarea class="form-control" rows="3" name="descripcion" placeholder="Motivo ..." required></textarea>
+                              </div>
                             </div>
-                          </div>
-                          <div class="modal-footer justify-content-between">
-                            <button type="button" class="btn btn-primary">Aceptar</button>
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                          </div>
+                            <div class="modal-footer justify-content-between">
+                              <button type="submit" class="btn btn-primary">Aceptar</button>
+                          </form>
+                              <!--<a type="button" class="btn btn-primary" href="{% url 'RejectTask' idTask=tarea.idTarea  %}">Aceptar</a>-->
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                            </div>
+                          
                         </div>
                         <!-- /.modal-content -->
                       </div>
