Se envia update para revision de actualizacion de tarea

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin TaskList</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.11.2/css/dataTables.bootstrap5.min.css">
+  {% comment %}
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.11.2/css/dataTables.bootstrap5.min.css"> {% endcomment %}
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" />
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -423,8 +425,9 @@
   <!-- REQUIRED SCRIPTS -->
   <!-- jQuery -->
   <!-- Datatable -->
-  {% comment %} <script src="https://code.jquery.com/jquery-3.5.1.js"></script> {% endcomment %}
-  <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  {% comment %} <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script> {% endcomment %}
+  <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
   <script src="{% static 'js/pages/dashboard2.js'%}"></script>
   <!-- Bootstrap -->
   <script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
@@ -455,16 +458,10 @@
 
   {% comment %} <script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
   <script src="https://cdn.datatables.net/1.11.2/js/dataTables.bootstrap5.min.js"></script> {% endcomment %}
-  <script>
-    $(function () {
-      //Date and time picker
-      $('#fechaplazo').datetimepicker({
-        icons: {
-          time: 'far fa-clock'
-        }
-      });
-    })
-  </script>
+
 </body>
+{% block script %}
+
+{% endblock script %}
 
 </html>
