--- a/templates/task/taskdetails.html
+++ b/templates/task/taskdetails.html
@@ -141,7 +141,7 @@
                   </p> {% endcomment %}
                 </div>
 
-                <h5 class="mt-5 text-muted">Enviar actualizacion</h5>
+                {% comment %} <h5 class="mt-5 text-muted">Enviar actualizacion</h5>
                 {% comment %} <ul class="list-unstyled">
                   <li>
                     <a href="" class="btn-link text-secondary"><i class="far fa-fw fa-file-word"></i>
@@ -161,7 +161,7 @@
                     <a href="" class="btn-link text-secondary"><i class="far fa-fw fa-file-word"></i>
                       Contract-10_12_2014.docx</a>
                   </li>
-                </ul> {% endcomment %}
+                </ul> 
                 <div class="input-group input-group mb-3">
                   <div class="input-group-prepend">
                     <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown"
@@ -183,7 +183,7 @@
                 <div class="text-center mt-5 mb-3">
                   <!-- <a href="#" class="btn btn-sm btn-primary">Enviar</a> -->
                   <a href="#" class="btn btn-sm btn-danger">Cancelar</a>
-                </div>
+                </div> {% endcomment %}
               </div>
             </div>
           </div>
