--- a/templates/teamwork/teamwork.html
+++ b/templates/teamwork/teamwork.html
@@ -1,99 +1,116 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block content %} 
-
+{% block content %}
 <div class="wrapper">
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Contenido cabecera (Page header) -->
-    <div class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1 class="m-0">Equipo de Trabajo</h1>
-          </div>
-          <!-- /.col -->
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item">
-                <a href="{% url 'dashboard' %}">Home</a>
-              </li>
-              <li class="breadcrumb-item active">Equipo de Trabajo</li>
-            </ol>
-          </div>
-          <!-- /.col -->
+    <div class="content-wrapper">
+        <div class="content-header">
+            <div class="container-fluid">
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1 class="m-0">Equipo de trabajo</h1>
+                    </div>
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item">
+                                <a href="{% url 'dashboard' %}">Home</a>
+                            </li>
+                            <li class="breadcrumb-item active">Equipo de Trabajo</li>
+                        </ol>
+                    </div>
+
+                </div>
+
+            </div>
         </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.container-fluid -->
+        <section class="content">
+            <div class="container-fluid">
+                <div class="card">
+                    <div class="car-body">
+                        <table id="datateam" class="table table-hover" data-mdb-clickable-rows="true"
+                            data-mdb-selectable="true" data-mdb-multi="true">
+                            <thead>
+                                <tr>
+                                    <th>Nombre</th>
+                                    <th>Apellidos</th>
+                                    <th>Rut</th>
+                                    <th>Departamento</th>
+                                    <th>Correo</th>
+                                    <th>Rol</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for team in datos.teams %}
+                                <tr style="color:#878781">
+                                    <td>{{team.nombreUsuario}}</td>
+                                    <td>{{team.apellidoUsuario}}
+                                        {% if team.segundoApellido %}{{team.segundoApellido}}{% endif %}
+                                    </td>
+                                    <td>{{team.rutUsuario}}</td>
+                                    <td>{{team.idUnidadInternaUsuario}}</td>
+                                    <td>{{team.correoElectronico}}</td>
+                                    <td>{{team.idRolUsuario}}</td>
+                                </tr>
+                                <!-- Modal -->
+                                <div class="modal fade" tabindex="-1" aria-hidden="true" id="modal-clickable-rows">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="modal-header-clickable-rows"></h5>
+                                                <button type="button" class="btn-close" data-mdb-dismiss="modal"
+                                                    aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body mt-4 mb-5" id="modal-body-clickable-rows"></div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-outline-primary">
+                                                    Reply<i class="fa fa-paper-plane ms-2"></i>
+                                                </button>
+                                                <button type="button" class="btn btn-outline-primary">
+                                                    Forward<i class="fa fa-arrow-right ms-2"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% endfor %}
+
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th>Nombre</th>
+                                    <th>Apellidos</th>
+                                    <th>Rut</th>
+                                    <th>Departamento</th>
+                                    <th>Correo</th>
+                                    <th>Rol</th>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+
+            </div> 
+        </section>
+
+
     </div>
-    <!-- /.Contenido cabecera -->
+    {% endblock content %}
 
-    <!--Contenido Principal -->
-    <section class="content">
-      <div class="container-fluid">
-        <div class="card">
-          <div class="car-body">
-            <table id="teams" class="table table-hover" style="width: 100%">
-              <thead>
-                <tr>
-                  <th>Nombre</th>
-                  <th>Apellidos</th>
-                  <th>Rut</th>
-                  <th>Departamento</th>
-                  <th>Correo</th>
-                  <th>Rol</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for teams in datos.teams %}
-                <tr data-href="{% url 'workload' %}" target="_blank" >
-                  <td>{{teams.nombreUsuario}}</td>
-                  <td>
-                    {{teams.apellidoUsuario}} 
-                    {% if teams.segundoApellido %}{{teams.segundoApellido}}{% endif %}
-                  </td>
-                  <td>{{teams.rutUsuario}}</td>
-                  <td>{{teams.idUnidadInternaUsuario}}</td>
-                  <td>{{teams.correoElectronico}}</td>
-                  <td>{{teams.idRolUsuario}}</td>
-                </tr>
-                {% endfor %}
-              </tbody>
-              <tfoot>
-                <tr>
-                  <th>Nombre</th>
-                  <th>Apellidos</th>
-                  <th>Rut</th>
-                  <th>Departamento</th>
-                  <th>Correo</th>
-                  <th>Rol</th>
-                </tr>
-              </tfoot>
-            </table>
-          </div>
-        </div>
-      </div>
-      <!--/. container-fluid -->
-    </section>
-    <!-- /.Contenido Principal -->
-  </div>
+    {% block script %}
+    <script type="text/javascript" language="javascript" class="init">
+        $(document).ready(function () {
+            var table = $('#datateam').DataTable({
+                scrollY: "50vh",
+                scrollCollapse: true,
+                paging: false,
+            });
+            $('#datateam').on('click', 'tbody tr', function () {
+                var data = table.row( this ).data();
+                var uri = "{% url 'workload' 123 %}"
+                window.location.href = uri.replace('123',data[2]);
+            });
+            $('tr').css('cursor', 'pointer');
+        });
+    </script>
 
 
-</div>
-{% endblock %}
-
-<script type="text/javascript" language="javascript" class="init">
-  $(document).ready(function () {
-    $("#teams").DataTable({
-      scrollY: "50vh",
-      scrollCollapse: true,
-      paging: false,
-    });
-  });
-
-$('#teams').on('click', 'tbody tr', function() {
-  window.location.href = `{% url 'workload' %}`;
-});
-$('tr').css('cursor','pointer');
-</script>
+    {% endblock script %}
