--- a/templates/subordinatetask/list_subordinatetask.html
+++ b/templates/subordinatetask/list_subordinatetask.html
@@ -1,5 +1,7 @@
 
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %} {% load static %}
+
+{% block content %}
 
 
 <!-- Site wrapper -->
@@ -60,7 +62,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                  {% for tareaSubordinada in data.tareaSubordinada %}
+                  {% for tareaSubordinada in datos.tareaSubordinada %}
                     <tr>
                         <td>
                           {{tareaSubordinada.idTareaSubordinada}}
@@ -73,6 +75,7 @@
                         </td>
                         <td class="project-actions text-right">
                             <a class="btn btn-info btn-sm" href="{% url 'EditTareaSubordinadaSection' idTareaSub=tareaSubordinada.idTareaSubordinada %}">
+
                                 <i class="fas fa-pencil-alt">
                                 </i>
                                 Editar
@@ -80,7 +83,6 @@
                             <a class="btn btn-danger btn-sm" href="#" onclick="confirmOption('eliminar', 'deleteTareaSubordinadaSection/{{tareaSubordinada.idTareaSubordinada}}')">
                                 <i class="fas fa-trash">
                                 </i>
-                                Eliminar
                             </a>
                         </td>
                     </tr>
@@ -94,6 +96,8 @@
   </div>
   <!-- /.content-wrapper -->
 </div>
+{% endblock content %}
+{% block script %}
 <script>
   function confirmOption(opcion, direccion){
   if(confirm("Esta seguro que desea "+ opcion)){
@@ -101,4 +105,4 @@
   }
 }
 </script>
-{% endblock content %}
+{% endblock script %}
